--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -474,9 +474,15 @@
   <li><strong>Wie kann nun ein Releaseplan vom Repository<br />
     unterstützt werden?<br />
   </strong></li>
-  <li><strong>Welche Versionsnummer gehört zu welcher Releasenummer?(Was ist im Gegensatz zur Releasenummer eine Versionsnummer?)</strong>
+  <li><strong>Welche Versionsnummer gehört zu welcher Releasenummer? (Was ist im Gegensatz zur Releasenummer eine Versionsnummer?)</strong>
     <ul>
-      <li> </li>
+      <li>Jede Auslieferung wird durch eine Releasenummer<br />
+      gekennzeichnet.</li>
+      <li>Releasenummer ≠ Versionsnummer des<br />
+      Repositories!</li>
+      <li>Die Versionsnummern der Repositories sind schlecht<br />
+        zu merken, daher bieten die Repositories Tags<br />
+      (Bezeichner)</li>
     </ul>
   </li>
   <li><strong>Warum soll (nicht) parallel gearbeitet werden?<br />
@@ -587,7 +593,11 @@
       </strong></li>
     </ul>
   </li>
-  <li><strong>Was ist ein Trunk?</strong><br>
+  <li><strong>Was ist ein Trunk?</strong>
+    <ul>
+      <li>Oft wird der Hauptentwicklungszweig als Trunk bezeichnet. <br>
+      </li>
+    </ul>
   </li>
 </ul>
 <h1>Normen</h1>
