--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -7,6 +7,9 @@
 .blue {
 	color: #00F;
 }
+.red {
+	color: #F00;
+}
 -->
 </style>
 </head>
@@ -65,32 +68,25 @@
       ist Qualitaet im allgemeinen?</strong></h2>
   </li>
 </ul>
-<p >&nbsp;</p>
 <p >Qualit&auml;t
-  ist die Gesamtheit von Eigenschaften und</p>
-<p >Merkmalen
-  eines Produkts oder einer T&auml;tigkeit, die sich auf</p>
-<p >deren
-  Eignung zur Erf&uuml;llung gegebener Erfordernisse</p>
-<p class="P16">bezieht.</p>
+  ist die Gesamtheit von Eigenschaften und Merkmalen
+  eines Produkts oder einer T&auml;tigkeit, die sich auf deren
+  Eignung zur Erf&uuml;llung gegebener Erfordernisse bezieht.</p>
 <ul>
   <li>
     <h2><strong>Software Qualit&auml;t?</strong></h2>
   </li>
 </ul>
-<p >&nbsp;</p>
 <p >Software-Qualit&auml;t
-  ist die Gesamtheit der Merkmale und</p>
-<p >Merkmalswerte
-  eines Software-Produkts, die sich auf dessen</p>
-<p >Eignung
-  beziehen, festgelegte oder vorausgesetzte</p>
-<p >Erfordernisse
-  zu erf&uuml;llen.</p>
+ist die Gesamtheit der Merkmale und 
+Merkmalswerte
+eines Software-Produkts, die sich auf dessen Eignung
+beziehen, festgelegte oder vorausgesetzte Erfordernisse
+zu erf&uuml;llen.</p>
 <p ><span class="T17"></p>
 <ul>
   <li>
-    <h2><strong>Wer bestimmt die Software Qualit&auml;t?</strong></h2>
+    <h2 class="red"><strong>Wer bestimmt die Software Qualit&auml;t?</strong></h2>
   </li>
 </ul>
 <p >&nbsp;</p>
@@ -109,7 +105,7 @@
   <li>Kunde geht
     zur Konkurrenz</li>
 </ul>
-<h2>Wo geht Qualit&auml;t verloren?</h2> 
+<h2 class="red">Wo geht Qualit&auml;t verloren?</h2> 
 </p>
 <div >
   <div style="height: 10.313cm; width: 16.999cm;" id="Grafik1" class="fr1">
@@ -117,11 +113,6 @@
  width="743"></p>
   </div>
 </div>
-<p ></p>
-<p >&nbsp;</p>
-<p >&nbsp;</p>
-<p >&nbsp;</p>
-<p >&nbsp;</p>
 <h2>Welche
   Qualit&auml;tsma&szlig;nahmen gibt es?</h2>
 <ul>
@@ -152,11 +143,11 @@
   <li>Metriken</li>
   <li>Testen (TDD)</li>
 </ul>
-<h2>Warum ist
+<h2 class="red">Warum ist
   Qualit&auml;t wichtig?</h2>
 <p >&nbsp;</p>
 <h2>Qualit&auml;tsmanagement<strong></strong></h2>
-<h2>Aufgaben eine Qualit&auml;tsbeauftragten</h2>
+<h2 class="red">Aufgaben eine Qualit&auml;tsbeauftragten</h2>
 <h2>Was sind
   Qualit&auml;tsmerkmale?</h2>
 <ul>
@@ -180,21 +171,16 @@
 <h2>Was sind
   Qualit&auml;tsziele?</h2>
 <ul>
-  <li>&nbsp;&nbsp;&nbsp; Ein Qualit&auml;tsziel ist ein
+  <li> Ein Qualit&auml;tsziel ist ein
     angestrebtes Merkmal.</li>
-  <li>&nbsp; &nbsp; Konstruktives Ziel muss es sein, fehlerfreie
-    Software-<br>
-    &nbsp;&nbsp;&nbsp; Komponenten zu entwickeln.</li>
-  <li>&nbsp; &nbsp; Analytische Ziel muss es sein, die
-    Fehlerfreiheit einer<br>
-    &nbsp;&nbsp;&nbsp; Software-Komponente nachzuweisen bzw.<br>
-    <p>&nbsp;&nbsp;&nbsp; vorhandene Fehler zu finden.<span
- style="font-weight: bold;"></p>
+  <li> Konstruktives Ziel muss es sein, fehlerfreie
+  Software-  &nbsp;&nbsp; Komponenten zu entwickeln.</li>
+  <li>  Analytische Ziel muss es sein, die
+    Fehlerfreiheit einer Software-Komponente nachzuweisen bzw. vorhandene Fehler zu finden.
   </li>
 </ul>
   <h2>Was sind
     Qualit&auml;tsindikatoren bzw. Metriken?</h2>
-  <br>
 <ul>
     <li>Die einzelnen Kriterien werden durch<span
  style="font-weight: bold;">&nbsp;Qualit&auml;tsindikatoren bzw.
@@ -215,32 +201,28 @@
 
 <h2>Welche Qualit&auml;tsma&szlig;nahmen kennen Sie?</h2>
 <p ></p>
-<p ><span style="font-weight: bold;">Konstruktive
-  Qualit&auml;tsma&szlig;nahmen<br>
-  &nbsp;&nbsp;&nbsp; sind Methoden, Sprachen, Werkzeuge, Richtlinien,
-  Standards und<br>
-  &nbsp;&nbsp;&nbsp; Checklisten, die dafür sorgen, dass das entstehende
-  Produkt bzw. der<br>
-  &nbsp;&nbsp;&nbsp; Erstellungsprozess &agrave; priori bestimmte
-  Eigenschaften besitzt.<br>
-  <span style="font-weight: bold;">Analytische
-  Qualit&auml;tsma&szlig;nahmen<br>
-  &nbsp;&nbsp;&nbsp; sind diagnostische Ma&szlig;nahmen, d. h. sie
-  bringen in das Produkt oder den<br>
-  &nbsp;&nbsp;&nbsp; Entwicklungsprozess per se keine Qualit&auml;t.<br>
-  &nbsp;&nbsp;&nbsp; Durch analytische Ma&szlig;nahmen wird das
-  existierende Qualit&auml;tsniveau<br>
-  &nbsp;&nbsp;&nbsp; gemessen.<br>
-  <span style="font-weight: bold;">Soziale und psychologische
-  Qualit&auml;tsma&szlig;nahmen<br>
-  &nbsp;&nbsp;&nbsp; werden oft vernachl&auml;ssigt, obwohl sie zu den
-  wichtigsten<br>
-  &nbsp;&nbsp;&nbsp; Ma&szlig;nahmengeh&ouml;ren.</p>
+<ul>
+  <li>Konstruktive
+    Qualit&auml;tsma&szlig;nahmen sind Methoden, Sprachen, Werkzeuge, Richtlinien,
+    Standards und Checklisten, die dafür sorgen, dass das entstehende
+    Produkt bzw. der Erstellungsprozess &agrave; priori bestimmte
+    Eigenschaften besitzt.<br>
+    </li>
+  <li>Analytische
+    Qualit&auml;tsma&szlig;nahmen sind diagnostische Ma&szlig;nahmen, d. h. sie
+    bringen in das Produkt oder den Entwicklungsprozess per se keine Qualit&auml;t.</li>
+  <li>Durch analytische Ma&szlig;nahmen wird das
+    existierende Qualit&auml;tsniveau gemessen.<br>
+    </li>
+  <li>Soziale und psychologische
+    Qualit&auml;tsma&szlig;nahmen werden oft vernachl&auml;ssigt, obwohl sie zu den
+    wichtigsten Ma&szlig;nahmengeh&ouml;ren.</li>
+</ul>
 <p >Technische Aspekte werden notorisch &uuml;berbewertet,
-  obwohl der Mensch der<br>
+  obwohl der Mensch der
   Schl&uuml;ssel zum Erfolg ist (Tom DeMarco und auch aus QM-Sicht!):</p>
 <p >Alle Mitarbeiter m&uuml;ssen ein
-  Qualit&auml;tsbewu&szlig;tsein entwickeln (k&ouml;nnen), das<br>
+  Qualit&auml;tsbewu&szlig;tsein entwickeln (k&ouml;nnen), das
   den Produktionsprozess hinzu einer optimalen Qualit&auml;t
   ver&auml;ndert.</p>
 <p ></p>
@@ -276,33 +258,7 @@
       </li>
       <li>Konfigurationsmanagementplan/-handbuch erstellen<br>
       </li>
-      <li>Projektstruktur festlegen</li>
-    </ul>
-  </li>
-</ul>
-<h2>Konfigurationselemente</h2>
-<ul>
-  <li>&bdquo;A software configuration item (SCI) is an<br>
-    aggregation of software designated for configurations<br>
-    management and is treated as a single entity in the<br>
-    SCM process.&rdquo;</li>
-  <li>eindeutige Konfigurationselemente
-    <ul>
-      <li>Quelltext</li>
-      <li>Anforderungsdokumente</li>
-      <li>Architektur- und</li>
-      <li>Designdokumente</li>
-      <li>Konfigurationsmanagement-</li>
-      <li>Handbuch</li>
-      <li>Schnittstellenvertr&auml;ge</li>
-      <li>Testspezifikation und Testdaten</li>
-      <li>Build-Skripte</li>
-      <li>Meta- und Konfigurationsdaten</li>
-      <li>Benutzerdokumentation</li>
-      <li>Installationsanleitung</li>
-      <li>Release-Notes  </li>
-    </ul>
-  </li>
+      <li>Projektstruktur festlegen</li></ul></li>
 </ul>
 <h2>KM-Handbuch </h2>
 <ul>
@@ -471,10 +427,10 @@
       <li>Trunk, Tagging und Branching</li>
     </ul>
   </li>
-  <li><strong>Wie kann nun ein Releaseplan vom Repository<br />
-    unterstützt werden?<br />
+  <li><span class="red"><strong>Wie kann nun ein Releaseplan vom Repository<br />
+    unterstützt werden?</strong></span><strong><br />
   </strong></li>
-  <li><strong>Welche Versionsnummer gehört zu welcher Releasenummer? (Was ist im Gegensatz zur Releasenummer eine Versionsnummer?)</strong>
+  <li><strong class="red">Welche Versionsnummer gehört zu welcher Releasenummer? (Was ist im Gegensatz zur Releasenummer eine Versionsnummer?)</strong>
     <ul>
       <li>Jede Auslieferung wird durch eine Releasenummer<br />
       gekennzeichnet.</li>
@@ -485,7 +441,7 @@
       (Bezeichner)</li>
     </ul>
   </li>
-  <li><strong>Warum soll (nicht) parallel gearbeitet werden?<br />
+  <li><span class="red"><strong>Warum soll (nicht) parallel gearbeitet werden?</strong></span><strong><br />
   </strong></li>
   <li><strong>Wie kann parallel gearbeitet werden?</strong>
     <ul>
@@ -508,7 +464,11 @@
     </ul>
   </li>
   <li><strong>Was sind
-    die Ziele des Konfigurationsmanagements?</strong></li>
+    die Ziele des Konfigurationsmanagements?</strong>
+    <ul>
+      <li>Ziel des KM ist es, den Grad der Erfüllung physischer und funktionaler Anforderungen an eine Konfigurationseinheit zu dokumentieren und diesbezüglich volle Transparenz herzustellen. Diese soll zudem dazu führen, dass jeder an einer Konfigurationseinheit Interessierte die richtige und zutreffende Dokumentation verwendet.</li>
+    </ul>
+  </li>
   <li><strong>Welche Konfigurationselemente kennen Sie?</strong>
     <ul>
       <li>IEEE definiert Konfigurationselemente</li>
