--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -33,10 +33,6 @@
   Anforderungsebenen gibt es? </p>
 <p>Wie
   erreicht man Qualit&auml;t? </p>
-<p >Qualit&auml;tssichernde
-  Ma&szlig;namen </p>
-<p >Konstruktive
-  Ma&szlig;nahmen </p>
 <p > Ma&szlig;nahmen die die
   Rahmenbedingungen f&uuml;r </p>
 <p >gute Softwareentwicklung schaffen<span
@@ -59,9 +55,56 @@
 <h1>Themenliste
   f&uuml;r Klausur</h1>
 <h1>Gabriele
-  Schmidt,</h1>
-<p >&bull; <span
- >Definition Qualit&auml;t</p>
+  Schmidt</h1>
+<p>kopie aus pdf:</p>
+<p>Themenliste für Klausur<br />
+  Gabriele Schmidt,<br />
+  • <s>Definition Qualität</s><br />
+  o Was ist Quality im allgemeinen?<br />
+  o Software Qualität?<br />
+  o Wer bestimmt die Software Qualität?<br />
+  o Wie wirkt sich fehlende Software-Qualität aus?<br />
+  o Wo geht Qualität verloren?<br />
+  o Welche Qualitätsmaßnahmen gibt es?<br />
+  o Fragen Prüfen Sie sich selbst<br />
+  • Qualitätsmanagement<br />
+  o Aufgaben eine Qualitätsbeauftragten<br />
+  o Qualitätsmaßnahmen (s. o.)<br />
+  o Qualitätsmerkmale<br />
+  o Fragen Prüfen Sie sich selbst<br />
+  • Konfigurationsmanagement<br />
+  o Vorbereitung<br />
+  o Konfigurationselemente<br />
+  o KM-Handbuch<br />
+  o Projektstruktur<br />
+  o <s>Repository<br />
+  o Versionierung<br />
+  o Releasemanagement<br />
+  o SVN<br />
+  o Was sind die Ziele des Konfigurationsmanagements?<br />
+  Welche Konfigurationselemente kennen Sie?<br />
+  Was sind keine Konfigurationselemente?<br />
+  Was leistet ein Repository?</s><br />
+    <s>Wie setzt sich eine Releasenummer zusammen?  </s><br />
+  Was ist im Gegensatz zur Releasenummer eine Versionsnummer?<br />
+  Wozu dienen Tags?<br />
+  <s>Was ist ein Trunk?</s><br />
+  Was ist ein Branch?<br />
+  • <s>Normen<br />
+  o ISO 9001<br />
+  o CMM (Capability Maturity Model)<br />
+  • Analytische Maßnahmen<br />
+  o Inspektion<br />
+  o Fragen Prüfen Sie sich selbst<br />
+  • Metriken<br />
+  o Kohäsion, Kopplung<br />
+  o Lines of Code (LOC),<br />
+  o Function Point<br />
+  o Zyklomatische Komplexität</s><br />
+  o <s>Healsted</s><br />
+  o <s>Objekt-orientierte Metriken</s><br />
+  o <s>Goal Question Metric (GQM)</s><br />
+  o <s>Fragen Prüfen Sie sich selbst</s></p>
 <ul>
   <li>
     <h2><strong>Was
