--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -15,8 +15,14 @@
 </head>
 <body style="margin: 2cm; direction: ltr; max-width: 20.999cm;">
 <h1>Rambow 1</h1>
+<p>!!!!abkuerzungen !!!!<br />
+3kiss open closed principle<br />
+graphiken anschauen (hudson testen)<br />
+automatisierung (was sollte man automatisieren (wie weit))<br />
+!!!!unit testen, continious integration, automatisierte tests!!!!<br />
+</p>
 <p>Was ist
-  Softwarequalit&auml;t? </p>
+Softwarequalit&auml;t? </p>
 <p>ISO Kriterien </p>
 <p>- Funktionalit&auml;t </p>
 <p>- Zuverl&auml;ssigkeit </p>
@@ -51,7 +57,6 @@
   welchen Ebenen wird QS eingebettet?</p>
 <p>Was ist
   Qualit&auml;tssicherung?</p>
-<p>&nbsp;</p>
 <h1>Themenliste
   f&uuml;r Klausur</h1>
 <h1>Gabriele
@@ -66,18 +71,26 @@
   o Wie wirkt sich fehlende Software-Qualität aus?<br />
   o Wo geht Qualität verloren?<br />
   o Welche Qualitätsmaßnahmen gibt es?<br />
-  o Fragen Prüfen Sie sich selbst<br />
+  o Was ist Software Qualität?<br />
+  Warum ist Qualität wichtig?<br />
+  Welche Qualitätsmaßnahmen gibt es?<br />
   • Qualitätsmanagement<br />
   o Aufgaben eine Qualitätsbeauftragten<br />
   o Qualitätsmaßnahmen (s. o.)<br />
   o Qualitätsmerkmale<br />
-  o Fragen Prüfen Sie sich selbst<br />
-  • Konfigurationsmanagement<br />
+  o Was ist Qualität?<br />
+  Was sind Qualitätsmerkmale?<br />
+  Was sind Qualitätskriterien?<br />
+  Was sind Qualitätsziele?<br />
+  Was sind Qualitätsindikatoren bzw. Metriken?<br />
+  Welche Qualitätsmaßnahmen kennen Sie?<br />
+  Worin unterscheiden sich die Qualitätsmaßnahmen?<br />
+  • <s>Konfigurationsmanagement<br />
   o Vorbereitung<br />
   o Konfigurationselemente<br />
   o KM-Handbuch<br />
   o Projektstruktur<br />
-  o <s>Repository<br />
+  o Repository<br />
   o Versionierung<br />
   o Releasemanagement<br />
   o SVN<br />
@@ -103,8 +116,16 @@
   o Zyklomatische Komplexität</s><br />
   o <s>Healsted</s><br />
   o <s>Objekt-orientierte Metriken</s><br />
-  o <s>Goal Question Metric (GQM)</s><br />
-  o <s>Fragen Prüfen Sie sich selbst</s></p>
+  o <s>Goal Question Metric (GQM)<br />
+  oWas sind Metriken?<br />
+  Welche Prozessmetriken kennen Sie?<br />
+  Welche Produktmetriken kennen Sie?<br />
+  Was ist LOC? Welche Kritikpunkte kenne Sie an<br />
+  LOC?<br />
+  Was sind FP? Wie funktioniert FPA?<br />
+  Wie funktioniert die Zykomatische Komplexität?<br />
+  Welche OO-Metriken kennen Sie?<br />
+  Wie Funktioniert GQM?</s></p>
 <ul>
   <li>
     <h2><strong>Was
