--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -64,26 +64,23 @@ Softwarequalit&auml;t? </p>
 <p>kopie aus pdf:</p>
 <p>Themenliste für Klausur<br />
   Gabriele Schmidt,<br />
-  • <s>Definition Qualität</s><br />
+  • <s>Definition Qualität<br />
   o Was ist Quality im allgemeinen?<br />
-  o Software Qualität?<br />
+  o Software Qualität?</s><br />
   o Wer bestimmt die Software Qualität?<br />
-  o Wie wirkt sich fehlende Software-Qualität aus?<br />
-  o Wo geht Qualität verloren?<br />
-  o Welche Qualitätsmaßnahmen gibt es?<br />
-  o Was ist Software Qualität?<br />
+  o <s>Wie wirkt sich fehlende Software-Qualität aus?</s><br />
+  o <s>Wo geht Qualität verloren?<br />
+  o Welche Qualitätsmaßnahmen gibt es?</s><br />
   Warum ist Qualität wichtig?<br />
-  Welche Qualitätsmaßnahmen gibt es?<br />
   • Qualitätsmanagement<br />
   o Aufgaben eine Qualitätsbeauftragten<br />
-  o Qualitätsmaßnahmen (s. o.)<br />
+  <s>o Qualitätsmaßnahmen (s. o.)<br />
   o Qualitätsmerkmale<br />
-  o Was ist Qualität?<br />
   Was sind Qualitätsmerkmale?<br />
   Was sind Qualitätskriterien?<br />
   Was sind Qualitätsziele?<br />
   Was sind Qualitätsindikatoren bzw. Metriken?<br />
-  Welche Qualitätsmaßnahmen kennen Sie?<br />
+  Welche Qualitätsmaßnahmen kennen Sie?</s><br />
   Worin unterscheiden sich die Qualitätsmaßnahmen?<br />
   • <s>Konfigurationsmanagement<br />
   o Vorbereitung<br />
@@ -151,6 +148,25 @@ zu erf&uuml;llen.</p>
 <ul>
   <li>
     <h2 class="red"><strong>Wer bestimmt die Software Qualit&auml;t?</strong></h2>
+    <ul>
+      <li>Qualitätsbeauftragter<br />
+      </li>
+      <li>Wunschprofil nach [Schneider 2008]<br />
+        <ul>
+          <li>Am wichtigsten<br />
+            </li>
+          <li>Informatik-Hintergrund<br />
+            </li>
+          <li>Kommunikationsfähigkeit<br />
+            </li>
+          <li>Eigeninitiative<br />
+            </li>
+          <li>Pragmatische Einstellung<br />
+            </li>
+          <li>Durchsetzungs- und Konfliktfähigkeit </li>
+        </ul>
+      </li>
+    </ul>
   </li>
 </ul>
 <p >&nbsp;</p>
@@ -209,7 +225,8 @@ zu erf&uuml;llen.</p>
 </ul>
 <h2 class="red">Warum ist
   Qualit&auml;t wichtig?</h2>
-<p >&nbsp;</p>
+<p><strong>siehe: Wie wirkt sich fehlende
+Software-Qualit&auml;t aus?</strong></p>
 <h2>Qualit&auml;tsmanagement<strong></strong></h2>
 <h2 class="red">Aufgaben eine Qualit&auml;tsbeauftragten</h2>
 <h2>Was sind
