--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -21,42 +21,41 @@ graphiken anschauen (hudson testen)<br />
 automatisierung (was sollte man automatisieren (wie weit))<br />
 !!!!unit testen, continious integration, automatisierte tests!!!!<br />
 </p>
-<p>Was ist
-Softwarequalit&auml;t? </p>
-<p>ISO Kriterien </p>
-<p>- Funktionalit&auml;t </p>
-<p>- Zuverl&auml;ssigkeit </p>
-<p>- Benutzbarkeit </p>
-<p>- Effizienz </p>
-<p>- &Auml;nderbarkeit </p>
-<p >-
-  &Uuml;bertragbarkeit</p>
-<p>Wieso
-  sollte man sie anstreben? </p>
-<p>Wovon
-  h&auml;ngt sie ab? </p>
-<p>Welche
-  Anforderungsebenen gibt es? </p>
-<p>Wie
-  erreicht man Qualit&auml;t? </p>
-<p > Ma&szlig;nahmen die die
-  Rahmenbedingungen f&uuml;r </p>
-<p >gute Softwareentwicklung schaffen<span
- > </p>
-<p > Requirementsengineering,
-  Projektmanagement, </p>
-<p >Infrastrukturma&szlig;namen,
-  organisatorisches </p>
-<p >Analytische
-  Ma&szlig;nahmen </p>
-<p > Testen </p>
-<p > Feststellen der notwendigen Metriken </p>
-<p > Kontinuierliche
-  &Uuml;berpr&uuml;fung der Metriken</p>
-<p>Auf
-  welchen Ebenen wird QS eingebettet?</p>
-<p>Was ist
-  Qualit&auml;tssicherung?</p>
+<ul>
+  <li>ISO Kriterien </li>
+  <li>- Funktionalit&auml;t </li>
+  <li>- Zuverl&auml;ssigkeit </li>
+  <li>- Benutzbarkeit </li>
+  <li>- Effizienz </li>
+  <li>- &Auml;nderbarkeit </li>
+  <li>-
+    &Uuml;bertragbarkeit</li>
+  <li>Wieso
+    sollte man sie anstreben? </li>
+  <li>Wovon
+    h&auml;ngt sie ab? </li>
+  <li>Welche
+    Anforderungsebenen gibt es? </li>
+  <li>Wie
+    erreicht man Qualit&auml;t? </li>
+  <li> Ma&szlig;nahmen die die
+    Rahmenbedingungen f&uuml;r gute Softwareentwicklung schaffen<span
+ > </li>
+  <li> Requirementsengineering,
+    Projektmanagement, </li>
+  <li>Infrastrukturma&szlig;namen,
+    organisatorisches </li>
+  <li>Analytische
+    Ma&szlig;nahmen </li>
+  <li> Testen </li>
+  <li> Feststellen der notwendigen Metriken </li>
+  <li> Kontinuierliche
+    &Uuml;berpr&uuml;fung der Metriken</li>
+  <li>Auf
+    welchen Ebenen wird QS eingebettet?</li>
+  <li>Was ist
+    Qualit&auml;tssicherung?</li>
+</ul>
 <h1>Themenliste
   f&uuml;r Klausur</h1>
 <h1>Gabriele
