--- a/Software_Qualität.html
+++ b/Software_Qualität.html
@@ -36,21 +36,30 @@ automatisierung (was sollte man automatisieren (wie weit))<br />
     h&auml;ngt sie ab? </li>
   <li>Welche
     Anforderungsebenen gibt es? </li>
-  <li>Wie
-    erreicht man Qualit&auml;t? </li>
-  <li> Ma&szlig;nahmen die die
-    Rahmenbedingungen f&uuml;r gute Softwareentwicklung schaffen<span
+  <li><strong>Wie
+    erreicht man Qualit&auml;t? </strong>
+<ul>
+      <li>Konstruktive Massnahmen
+        <ul>
+          <li> Ma&szlig;nahmen die die
+            Rahmenbedingungen f&uuml;r gute Softwareentwicklung schaffen<span
  > </li>
-  <li> Requirementsengineering,
-    Projektmanagement, </li>
-  <li>Infrastrukturma&szlig;namen,
-    organisatorisches </li>
-  <li>Analytische
-    Ma&szlig;nahmen </li>
-  <li> Testen </li>
-  <li> Feststellen der notwendigen Metriken </li>
-  <li> Kontinuierliche
-    &Uuml;berpr&uuml;fung der Metriken</li>
+          <li> Requirementsengineering,
+            Projektmanagement, Infrastrukturma&szlig;namen,
+            organisatorisches </li>
+        </ul>
+      </li>
+      <li>Analytische
+        Ma&szlig;nahmen 
+        <ul>
+          <li> Testen </li>
+          <li> Feststellen der notwendigen Metriken </li>
+          <li> Kontinuierliche
+            &Uuml;berpr&uuml;fung der Metriken</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
   <li>Auf
     welchen Ebenen wird QS eingebettet?</li>
   <li>Was ist
